don't reacquire read lock when getting all shards SERVER-3266